--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "moment4.1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "server": "nodemon server.js"
   },
